# CamServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  example.html
src/: camera_pool.hpp  main.cpp
