cmake_minimum_required(VERSION 2.8)
project( CamServer )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} /usr/lib/boost/build/include )
link_directories( /usr/lib/boost/build/lib )
add_executable( cam_server src/main.cpp )
target_link_libraries( cam_server ${OpenCV_LIBS} )
target_link_libraries( cam_server pthread )
target_compile_options (cam_server PRIVATE -std=c++11)
